# tutor-contrib-fpf-plugin-slot-tester

./: .hatch_build.py  LICENSE.txt  MANIFEST.in  Makefile  README.rst  pyproject.toml
tutorfpf_plugin_slot_tester/: plugin.py
tutorfpf_plugin_slot_tester/patches/: custom_course_list.py
