# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://hatch.pypa.io/latest/config/build/

[project]
name = "tutor-contrib-fpf-plugin-slot-tester"
description = "FPF PluginSlot tester plugin for Tutor"
authors = [
  { name = "Brian Smith"}, 
  { email = "bsmith@axim.org" },
]
license = { text = "MIT" }

readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",

]
dependencies = [
    "tutor>=19.0.0,<20.0.0",
]
optional-dependencies = { dev = ["tutor[dev]>=19.0.0,<20.0.0"] }

# These fields will be set by hatch_build.py
dynamic = ["version"]

# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[project.urls]
Documentation = "https://github.com/brian-smith-tcril/tutor-contrib-fpf-plugin-slot-tester#readme"
Issues = "https://github.com/brian-smith-tcril/tutor-contrib-fpf-plugin-slot-tester/issues"
Source = "https://github.com/brian-smith-tcril/tutor-contrib-fpf-plugin-slot-tester"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# hatch-specific configuration
[tool.hatch.metadata.hooks.custom]
path = ".hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["tutorfpf_plugin_slot_tester"]

[tool.hatch.build.targets.sdist]
# Disable strict naming, otherwise twine is not able to detect name/version
strict-naming = false
include = [ "/tutorfpf_plugin_slot_tester", ".hatch_build.py"]
exclude = ["tests*"]

[project.entry-points."tutor.plugin.v1"]
fpf-plugin-slot-tester = "tutorfpf_plugin_slot_tester.plugin"
